# talking-stickies

./: Cargo.toml  README.md  package-lock.json  package.json
dnas/talking-stickies/workdir/: dna.yaml
dnas/talking-stickies/zomes/coordinator/profiles/: Cargo.toml
dnas/talking-stickies/zomes/integrity/profiles/: Cargo.toml
ui/: index.html  package.json  vite.config.ts
ui/src/: AboutDialog.svelte  AgentName.svelte  App.svelte  AttachmentsBind.svelte  AttachmentsDialog.svelte  AttachmentsList.svelte  Avatar.svelte  AvatarDialog.svelte  AvatarIcon.svelte  BoardEditor.svelte  BoardMenu.svelte  BoardMenuItem.svelte  ClickEdit.svelte  Controller.svelte  ControllerBoard.svelte  ControllerCreate.svelte  EditBoardDialog.svelte  Folk.svelte  NewBoardDialog.svelte  Participants.svelte  ParticipantsDialog.svelte  Search.svelte  SortSelector.svelte  StickyEditor.svelte  TalkingStickiesPane.svelte  Team.svelte  Toolbar.svelte  app.css  board.ts  boardList.ts  export.ts  index.js  store.ts  svgIcons.ts  tsStore.ts  util.ts  we.ts
ui/src/icons/: AcceptIcon.svelte  AddCard.svelte  AddGroupIcon.svelte  CancelIcon.svelte  TSLogoIcon.svelte  TrashIcon.svelte
we_dev/: config.json  config.ts
workdir/: happ.yaml  web-happ.yaml
