[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.5.0"
hdk = "0.4.0"
serde = "1"

[workspace.dependencies.talking-stickies]
path = "dnas/talking-stickies/zomes/coordinator/talking-stickies"

[workspace.dependencies.talking-stickies_integrity]
path = "dnas/talking-stickies/zomes/integrity/talking-stickies"

[workspace.dependencies.profiles]
path = "dnas/talking-stickies/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/talking-stickies/zomes/integrity/profiles"
